Changes from jTDS 1.2.6
=======================

09/21/2012 - Holger Rehn
 o Fixed possible NPEs in JtdsObjectFactory (bug #633).
 o Added missing getter/setter methods for connection property "autoCommit" in
   class JtdsDataSource.
 o Corrected data types for connection properties "autoCommit" and "useNTLMv2".
 o Added missing properties to JtdsObjectFactoryUnitTest.testNoProperties().
 o Added missing default for connection property "useNTLMv2".
 o Corrected and simplified JtdsObjectFactoryTest and JtdsDataSourceTest.
 o Fixed memory pollution caused by ThreadLocal Calendar instances (bug #661).
 o Improved fix for bug #561 and bug #619 by not re-using GregorianCalendar
   instances anymore.
 o Implemented ResultSet.isClosed() method defined in JDBC 4.0 (bug #665).

09/19/2012 - Holger Rehn
 o Added test for bug #657.

09/18/2012 - Holger Rehn
 o Fixed buffer overflow in SQL parser (bug #673).
 o Added missing description for 'autoCommit' property added in revision [1123].
 o Corrected a number of JUnit tests.

09/07/2012 - Holger Rehn
 o Fixed jTDS version reported by the driver.

08/21/2012 - Holger Rehn
 o Applied build system changes proposed by Rainer Schwarze in patch #105.
 o Added compiler settings missing in some build files.
 o Updated feature matrix for SQL Server 2008 compatibility (bug #643).

08/17/2012 - Holger Rehn
 o Added service provider configuration file for JDBC driver class (bug #659).
 o Applied patch provided by Rainer Schwarze to reduce log pollution during
   emulated XA recovery (bug #656).
 o Removed @Override annotation not supported prior to Java 1.5.
 o Fixed spurious login timeouts that could occur in case multiple connections
   are established concurrently (bug #667).
 o Corrected bug, a stream hasn't been closed in CharsetInfo (bug #642).

08/16/2012 - Holger Rehn
 o Fixed typos in Messages.properties (bug #608).
 o Removed WebRing code from the project web site (bug #660).